--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
           <li class="nav__item">
             <a href="#portfolio" class="nav__link">
-              <i class="uil uil-suitcase nav__icon"></i>Portfolio
+              <i class="uil uil-suitcase nav__icon"></i>Side Project
             </a>
           </li>
 
@@ -723,8 +723,8 @@
 
     <!------------------------- PROJECTS ------------------------->
     <section class="portfolio section" id="portfolio">
-      <h2 class="section__title" data-aos="fade-right" data-aos-duration="1200" data-aos-once="true">Portfolio</h2>
-      <span class="section__subtitle">Selected Projects</span>
+      <h2 class="section__title" data-aos="fade-right" data-aos-duration="1200" data-aos-once="true">Side Project</h2>
+      <!-- <span class="section__subtitle">Selected Projects</span> -->
 
       <div class="blog-slider">
         <div class="blog-slider__wrp swiper-wrapper">
@@ -732,38 +732,16 @@
           <!-- project item 1 -->
           <div class="blog-slider__item swiper-slide">
             <div class="blog-slider__img">
-              <img src="img/project/covid.PNG" alt="Project Item">
+              <img src="#" alt="Project Item">
             </div>
             <div class="blog-slider__content">
               <span class="blog-slider__code">2021 August</span>
-              <div class="blog-slider__title">Covid-19 Tracker</div>
-              <div class="blog-slider__text"> Written
-                in Java. Keep track and detect the vaccination status and flu messages according to
-                location. Show the fully and partial vaccination rate according to given location.</div>
-              <a href="#portfolio" target="_blank" class="button blog-slider__button button--flex" data-toggle="modal"
-                data-target="#projectOne">Private
-                <i class="uil uil-lock button__icon"></i></a>
-              <div class="modal fade" id="projectOne" role="dialog">
-                <div class="modal-dialog">
+              <div class="blog-slider__title">Image Inpainting for Irregular Stains</div>
+              <div class="blog-slider__text"> Python</div>
+                <a href="https://github.com/WeiRu-Bob/Image-Inpainting-for-Irregular-Stains" target="_blank"
+                class="button blog-slider__button button--flex">Repo
+                <i class="uil uil-github-alt button__icon"></i></a>
 
-                  <!-- Modal content-->
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title">Private Project</h4>
-                    </div>
-                    <div class="modal-body">
-                      <p>Sorry this project is a school project. It's currently unavailable! If you want access
-                        please contact me!</p>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                  </div>
-                  <!-- end -->
-
-                </div>
-              </div>
 
             </div>
           </div>
@@ -772,14 +750,14 @@
           <!-- project item 2 -->
           <div class="blog-slider__item swiper-slide">
             <div class="blog-slider__img">
-              <img src="img/project/TodoDemo.png" alt="Project Item">
+              <img src="#" alt="Project Item">
             </div>
             <div class="blog-slider__content">
               <span class="blog-slider__code">March 2021</span>
               <div class="blog-slider__title">Task Management App</div>
               <div class="blog-slider__text">An application made in React, JavaScript and uses Firebase to keep track of
                 items, timestamps. Uses React to respond cute icons according to user input.</div>
-              <a href="https://github.com/Tiffany-Chien/animal-crossing-todo-list" target="_blank"
+              <a href="#" target="_blank"
                 class="button blog-slider__button button--flex">Repo
                 <i class="uil uil-github-alt button__icon"></i></a>
             </div>
@@ -789,14 +767,14 @@
           <!-- project item 3 -->
           <div class="blog-slider__item swiper-slide">
             <div class="blog-slider__img">
-              <img src="img/project/DM.png" alt="Project Item">
+              <img src="#" alt="Project Item">
             </div>
             <div class="blog-slider__content">
               <span class="blog-slider__code">July 2021</span>
               <div class="blog-slider__title">Diabetes Prediction Using Machine Learning</div>
               <div class="blog-slider__text">Use Machine Learning and PIMA data to predict whether a person is suffering
                 from diabetes or not.</div>
-              <a href="https://github.com/Tiffany-Chien/diabetes-predicting-ML" target="_blank"
+              <a href="#" target="_blank"
                 class="button blog-slider__button button--flex">Repo
                 <i class="uil uil-github-alt button__icon"></i></a>
             </div>
@@ -806,14 +784,14 @@
           <!-- project item 4 -->
           <div class="blog-slider__item swiper-slide">
             <div class="blog-slider__img">
-              <img src="img/project/discordicon.png" alt="Project Item">
+              <img src="#" alt="Project Item">
             </div>
             <div class="blog-slider__content">
               <span class="blog-slider__code">In Progress</span>
               <div class="blog-slider__title">VeryClefairy's Discord Bot</div>
               <div class="blog-slider__text">A discord bot written in node.js to learn API libraries, and is used for my
                 personal Twitch Discord.</div>
-              <a href="https://github.com/Tiffany-Chien/vc-discord-bot" target="_blank"
+              <a href="#" target="_blank"
                 class="button blog-slider__button button--flex">Repo
                 <i class="uil uil-github-alt button__icon"></i></a>
             </div>
